# a2a-mcp-lifestyle

./: Makefile  README.md  docker-compose.yml
agents/a2a_agent_master/: a2a_agent.py  agent.py  pyproject.toml
agents/a2a_agent_master/ops/: Dockerfile.dev
agents/a2a_agent_master/src/a2a_tools/: chart_maker.py  financial_planner.py  google_maps.py  google_search.py  hello_world_greeter.py  pdf_parser.py  runtime_config.py
agents/chart_maker/: a2a_agent.py  agent.py  pyproject.toml
agents/chart_maker/ops/: python-dev-run.sh
agents/financial-planner/: agent.py
agents/financial_planner/: a2a_agent.py  pyproject.toml
agents/google_maps/: a2a_agent.py  agent.py  main.py  pyproject.toml
agents/google_search/: a2a_agent.py  agent.py  pyproject.toml
agents/hello_world_greeter/: a2a_agent.py  agent.py  pyproject.toml
agents/pdf_parser/: a2a_agent.py  agent.py  pyproject.toml
agents/pdf_parser/.adk/: session.db
agents/pdf_parser/ops/: python-dev-run.sh
mcp-servers/google-maps/: main.py  pyproject.toml
